# rufio

./: Cargo.toml  README.md  SHARED_CONFIG.md  package.nix  rufio-hooks.yaml  shell.nix
src/: config.rs  input.rs  main.rs  presets.rs  transcript.rs  zellij.rs
src/checks/: cargo.rs  common.rs  meow.rs  mod.rs  runner.rs  version_bump.rs
tests/: integration.rs
